FocusController::setInitialFocus should ignore sequential focus navigation starting point.

If an element was focused before calling setInitialFocus(), we unexpectedly
started to search for focus candidates at the last focused element.

BUG=591612
TEST=automated

Review URL: https://codereview.chromium.org/1759413002

Cr-Commit-Position: refs/heads/master@{#379223}

Former-commit-id: 97e1c9eed32d48ac464dcd5ee482c8123f8b810f