third_party/WebKit/Source/core/core.gypi
@@ -4031,6 +4031,7 @@
             'page/ChromeClientTest.cpp',
             'page/ContextMenuControllerTest.cpp',
             'page/EventSourceParserTest.cpp',
+            'page/FocusControllerTest.cpp',
             'page/NetworkStateNotifierTest.cpp',
             'page/PagePopupClientTest.cpp',
             'page/PrintContextTest.cpp',
